--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -4,19 +4,23 @@
 body{
   font-family: 'Montserrat', sans-serif;
 
-  background: #2c3e50;
+
+}
+.wrapper{
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 20px 0 50px;
-  height: 100vh;
+  margin: 50px 0 50px;
+  max-height: 100vh;
+  height: 100%;
 }
 
 
-body:before{
+.wrapper:before{
   content: "";
-  animation: grain 8s steps(2) infinite;
+  //animation: grain 8s steps(2) infinite;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -92,9 +96,10 @@ a{
   padding: 12px 15px;
   width: 100%;
   margin: 8px 0;
+  border-radius: 4px ;
 
 }
-button{
+.wrapper button{
   border-radius: 20px;
   border: 1px solid #ff4b2b;
   background: #ff4b2b;
@@ -107,13 +112,13 @@ button{
   transition: transform 80ms ease-in;
 
 }
-button:active{
+.wrapper button:active{
   transform:scale(0.95) ;
 }
-button:focus {
+.wrapper button:focus {
   outline: none;;
 }
-button.ghost{
+.wrapper button.ghost{
   background: transparent;
   border-color: #fff;
 }
@@ -185,7 +190,7 @@ button.ghost{
     height: 700px;
   }
   .form-container{
-    height: 50%;
+    height: 60%;
   }
   .sign-up-container{
     width: 100%;
